Upgrading to Spark 1.4.0 version
- Overriding ResolveReferences analyzer rule with ResolveReferencesWithHierarchies
to work with Hierarchies.
- Adapted multiple interface modifications.
- Using UTF8String instead of String internally.
- Removed AddDefaultExchange rule to ensure the default parallelism.
- Modified EnsureRequirement instantiation to ensure the defaul parallelism.
- Modified Append and Drop commands to comply the new interface.
- Enhanced string build when adding EID into aliases.
- Typo fixed: WithVelocityFixes.
- New PlanTest trait to add testing functions for logical plans.
- Test fixed: VelocitySqlInterpreterSuite test fixed.
- Bugs fixed in tests.
- Increased log level in tests to avoid unneeded traces.

Change-Id: I686de480e482023c726e961c6b714d8fbac493d7